--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: accounts
+#
+#  id         :integer          not null, primary key
+#  code       :string
+#  name       :string
+#  amount     :decimal(, )
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
