--- a/test/fixtures/transfers.yml
+++ b/test/fixtures/transfers.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: transfers
+#
+#  id         :integer          not null, primary key
+#  account_id :integer
+#  to_account :integer
+#  amount     :decimal(, )
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
